--- a/src/localization/faq.en.json
+++ b/src/localization/faq.en.json
@@ -1,11 +1,11 @@
 [
   {
     "question": "What is the AtomOne Staking Portal?",
-    "answer": "The AtomOne Staking Portal is a seamlessly integrated interface empowering secure and efficient governance interactions with the AtomOne chain."
+    "answer": "The AtomOne Staking Portal is a seamlessly integrated interface empowering secure and efficient delegation interactions with the AtomOne chain."
   },
   {
     "question": "What is the purpose of the AtomOne Staking Portal?",
-    "answer": "The objective of the AtomOne Staking Portal is to ensure that users can easily participate in the governance process while engaging securely without compromising private keys."
+    "answer": "The objective of the AtomOne Staking Portal is to ensure that users can easily participate in the delegation process while engaging securely without compromising private keys."
   },
   {
     "question": "How does the AtomOne Staking Portal encourage community engagement?",
@@ -17,7 +17,7 @@
   },
   {
     "question": "Which wallets support AtomOne Staking Portal?",
-    "answer": "In addition to using the AtomOne CLI (recommended method of signing), users of the AtomOne Staking Portal are also able to vote by connecting any of their Keplr, Leap or Cosmostation wallets."
+    "answer": "In addition to using the AtomOne CLI (recommended method of signing), users of the AtomOne Staking Portal are also able to delegate, undelegate, redelegate or claim rewards by connecting any of their Keplr, Leap or Cosmostation wallets."
   },
   {
     "question": "What is the safest way to interact with the AtomOne Staking Portal?",
